--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.1.3",
-    "cors": "^2.8.5",
-    "gh-pages": "^4.0.0",
+    "cors": "^2.8.5", 
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
@@ -41,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": { "gh-pages": "^4.0.0"}
 }
